# RobustFEA

./: .gitignore  LICENSE  Project.toml  README.md  TESTE.jl  beam.json  case_3.json  config.xml  cross.dxf  cross.json  cross_0.json  disc_mesh.py  example.dxf  example.json  example2.dxf  example2.json  example3.dxf  example3.json  example4.dxf  example4.json  example_output.json  fan.dxf  fan.json  fan2.dxf  fan_circle.dxf  fan_circle.json  flower.json  flower_025_1.dxf  flower_05_1.dxf  flower_075_1.dxf  flower_1_025.dxf  flower_1_05.dxf  flower_1_075.dxf  flower_1_1.dxf  flower_2.dxf  flower_sing.dxf  flower_sing.json  hook_2.npz  hook_test.json  main copy.jl  (+26 more)
data_handler/: __init__.py  base_data.py  compliances.py  data_to_save.py  modeller.py  modeller_old.py  optimizer.py  results.py  save_data.py  structure.py  utils.py
examples/disc/: flower_1-1_1.dxf  flower_2-1_1.dxf
examples/example_1/: example_1.dxf  example_1.json  example_1_read.py  example_1_write.py  run_example_1.jl
examples/hook/: case_0.dxf  case_0.json  case_0.mat  case_1.dxf  case_1.json  case_1.mat  case_2.dxf  case_2.json  case_2.mat  case_3.dxf  case_3.json  case_3.mat  case_4.dxf  case_4.json  case_4.mat  read.py  run.jl  write.py
final_examples/: hook_0.json  hook_1.json  hook_2.json  hook_3.json  hook_4.json  hook_5.json  hook_6.json  hook_7.json  hook_8.json
final_results/Case 0/: domain.eps  solution.eps
final_results/Case 1/: domain.eps  solution.eps
final_results/Case 2/: domain.eps  (+1 more)
python_experiment/: main.py  results
src/: RobustFEA.jl  RobustOtm.jl
test/: runtests.jl
(+84 files in other folders)
